[project]
name = "kcc-api"
version = "0.1.0"
description = "An API for interacting with Kildare County Council Online Planning Search Portal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.4",
    "rich>=13.0.0",
]

[project.scripts]
kcc = "kcc_api.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
